--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: nginx:1.21.0-alpine
     container_name: proxy
     volumes:
-      - .proxy/default.conf:/etc/nginx/templates/default.conf.template
+      - .config/proxy/default.conf:/etc/nginx/templates/default.conf.template
     ports:
       - $PROXY_PORT:80
     depends_on:
@@ -26,7 +26,8 @@ services:
       - $AUTH_GRPC_PORT:50051
       - $AUTH_REST_PORT:8080
     volumes:
-      - services/auth-service:/go/src/
+      # - service/auth-service:/go/src/
+      - ../auth-service:/go/src/
     depends_on:
       - keycloak
     networks:
@@ -46,7 +47,7 @@ services:
       KEYCLOAK_USER: $KEYCLOAK_USERNAME
       KEYCLOAK_PASSWORD: $KEYCLOAK_PASSWORD
       # Uncomment the line below if you want to specify JDBC parameters. The parameter below is just an example, and it shouldn't be used in production without knowledge. It is highly recommended that you read the PostgreSQL JDBC driver documentation in order to use it.
-      #JDBC_PARAMS: "ssl=true"
+      # JDBC_PARAMS: "ssl=true"
     ports:
       - 8080:8080
     depends_on:
@@ -71,12 +72,13 @@ services:
       dockerfile: Dockerfile
     environment:
       ENV: dev
-      ELASTIC_APM_SERVICE_NAME: 'time-record-service'
+      ELASTIC_APM_SERVICE_NAME: time-record-service
     ports:
       - $TIME_RECORD_GRPC_PORT:50051
       - $TIME_RECORD_REST_PORT:8080
     volumes:
-      - services/time-record-service:/go/src/
+      # - service/time-record-service:/go/src/
+      - ../time-record-service:/go/src/
     depends_on:
       - trdb
     networks:
@@ -130,7 +132,8 @@ services:
       - $EMPLOYEE_GRPC_PORT:50051
       - $EMPLOYEE_REST_PORT:8080
     volumes:
-      - services/employee-service:/go/src/
+      # - service/employee-service:/go/src/
+      - ../employee-service:/go/src/
     depends_on:
       - keycloak
     networks:
@@ -151,7 +154,7 @@ services:
     networks:
       - timeclock
     environment:
-      - ./.elastic/apm-server.yml:/usr/share/apm-server/apm-server.yml
+      - .config/elastic/apm-server.yml:/usr/share/apm-server/apm-server.yml
     healthcheck:
       interval: 10s
       retries: 12
@@ -187,7 +190,7 @@ services:
     ports:
       - 5601:5601
     volumes:
-      - ./.elastic/kibana.yml:/usr/share/kibana/config/kibana.yml
+      - .config/elastic/kibana.yml:/usr/share/kibana/config/kibana.yml
     depends_on:
       - elasticsearch
     networks:
@@ -202,7 +205,7 @@ services:
     ports:
       - 9200:9200
     volumes:
-      - ./.elastic/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - .config/elastic/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       #   - ./.elastic/elasticsearch-ik-plugin:/usr/share/elasticsearch/plugins/ik
       - esdata:/usr/share/elasticsearch/data
     environment:
@@ -218,6 +221,58 @@ services:
       interval: 20s
       retries: 10
       test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+    networks:
+      - timeclock
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - 9092:9092
+      - 9094:9094
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_LISTENERS: INTERNAL://:9092,OUTSIDE://:9094
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://host.docker.internal:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+    networks:
+      - timeclock
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+
+  kafka-topics-generator:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - kafka
+    command: >
+      bash -c
+        "sleep 5s &&
+        kafka-topics --create --topic=employees --if-not-exists --bootstrap-server=kafka:9092"
+    networks:
+      - timeclock
+
+  control-center:
+    image: confluentinc/cp-enterprise-control-center:6.0.1
+    hostname: control-center
+    depends_on:
+      - kafka
+    ports:
+      - 9021:9021
+    environment:
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: kafka:9092
+      CONTROL_CENTER_REPLICATION_FACTOR: 1
+      PORT: 9021
+    networks:
+      - timeclock
 
 volumes:
   esdata:
