--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,25 +9,25 @@ services:
     ports:
       - $PROXY_PORT:80
     depends_on:
-      - auth-service
+      - auth-keycloak-acl
       - employee-service
       - time-record-service
     networks:
       - timeclock
 
-  auth-service:
+  auth-keycloak-acl:
     build:
       context: .
       dockerfile: Dockerfile
     environment:
       ENV: dev
-      ELASTIC_APM_SERVICE_NAME: auth-service
+      ELASTIC_APM_SERVICE_NAME: auth-keycloak-acl
     ports:
       - $AUTH_GRPC_PORT:50051
       - $AUTH_REST_PORT:8080
     volumes:
-      # - service/auth-service:/go/src/
-      - ../auth-service:/go/src/
+      # - service/auth-keycloak-acl:/go/src/
+      - ../auth-keycloak-acl:/go/src/
     depends_on:
       - keycloak
     networks:
@@ -247,7 +247,7 @@ services:
     networks:
       - timeclock
     extra_hosts:
-      - "host.docker.internal:172.17.0.1"
+      - 'host.docker.internal:172.17.0.1'
 
   kafka-topics-generator:
     image: confluentinc/cp-kafka:latest
