--- a/.config/proxy/default.conf
+++ b/.config/proxy/default.conf
@@ -6,7 +6,7 @@ server {
     error_log  /var/log/nginx/host.error.log debug;
 
     location /api/v1/auth {
-        proxy_pass http://auth-service:8080;
+        proxy_pass http://auth-keycloak-acl:8080;
     }
 
     location /api/v1/employees {
@@ -17,26 +17,6 @@ server {
         proxy_pass http://time-record-service:8080;
     }
 
-    # # Grafana
-    # location /grafana/ {
-    #     proxy_pass http://${HOST}:${GRAFANA_PORT}/;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Host $server_name;
-    # }
-
-    # location /grafana {
-    #     absolute_redirect off;
-    #     return 301 /grafana/;
-    # }
-
-    # location / {
-    #     absolute_redirect off;
-    #     return 301 /;
-    # }
-
-    # redirect server error pages to the static page /50x.html
     error_page 500 502 503 504 /50x.html;
 
     location = /50x.html {
