--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,36 +35,25 @@ services:
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
 
-  keycloak:
-    image: quay.io/keycloak/keycloak:latest
+  employee-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
-      DB_VENDOR: POSTGRES
-      DB_ADDR: keycloakdb
-      DB_DATABASE: $KEYCLOAK_DB
-      DB_USER: $KEYCLOAK_USERNAME
-      DB_SCHEMA: public
-      DB_PASSWORD: $KEYCLOAK_PASSWORD
-      KEYCLOAK_USER: $KEYCLOAK_USERNAME
-      KEYCLOAK_PASSWORD: $KEYCLOAK_PASSWORD
-      # Uncomment the line below if you want to specify JDBC parameters. The parameter below is just an example, and it shouldn't be used in production without knowledge. It is highly recommended that you read the PostgreSQL JDBC driver documentation in order to use it.
-      # JDBC_PARAMS: "ssl=true"
+      ENV: dev
+      ELASTIC_APM_SERVICE_NAME: employee-service
     ports:
-      - 8080:8080
-    depends_on:
-      - keycloakdb
-    networks:
-      - timeclock
-
-  keycloakdb:
-    image: postgres
+      - $EMPLOYEE_GRPC_PORT:50051
+      - $EMPLOYEE_REST_PORT:8080
     volumes:
-      - pgauthdb:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: $KEYCLOAK_DB
-      POSTGRES_USER: $KEYCLOAK_USERNAME
-      POSTGRES_PASSWORD: $KEYCLOAK_PASSWORD
+      # - service/employee-service:/go/src/
+      - ../employee-service:/go/src/
+    depends_on:
+      - postgres
     networks:
       - timeclock
+    extra_hosts:
+      - 'host.docker.internal:172.17.0.1'
 
   time-record-service:
     build:
@@ -80,68 +69,69 @@ services:
       # - service/time-record-service:/go/src/
       - ../time-record-service:/go/src/
     depends_on:
-      - trdb
+      - postgres
     networks:
       - timeclock
     extra_hosts:
       - 'host.docker.internal:172.17.0.1'
 
-  trdb:
-    image: mongo:4.4
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    environment:
+      DB_VENDOR: POSTGRES
+      DB_ADDR: postgres
+      DB_DATABASE: $KEYCLOAK_DB
+      DB_USER: $POSTGRES_USER
+      DB_SCHEMA: public
+      DB_PASSWORD: $POSTGRES_PASSWORD
+      KEYCLOAK_USER: $KEYCLOAK_USERNAME
+      KEYCLOAK_PASSWORD: $KEYCLOAK_PASSWORD
+      # Uncomment the line below if you want to specify JDBC parameters. The parameter below is just an example, and it shouldn't be used in production without knowledge. It is highly recommended that you read the PostgreSQL JDBC driver documentation in order to use it.
+      # JDBC_PARAMS: "ssl=true"
+    ports:
+      - 8080:8080
+    depends_on:
+      - postgres
+    networks:
+      - timeclock
+
+  postgres:
+    image: postgres:9.4
     restart: always
-    command: mongod --auth
     tty: true
     environment:
-      MONGO_INITDB_ROOT_USERNAME: $MONGODB_USERNAME
-      MONGO_INITDB_ROOT_PASSWORD: $MONGODB_PASSWORD
-      MONGO_INITDB_DATABASE: $DB_NAME
-      MONGODB_DATA_DIR: /data/db
-      MONDODB_LOG_DIR: /dev/null
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_MULTIPLE_DATABASES: $POSTGRES_DBS
     volumes:
-      - mgdata:/data/db
+      - .config/db:/docker-entrypoint-initdb.d
+      - pgdata:/var/lib/postgresql/data
     ports:
-      - $DB_PORT:27017
+      - $DB_PORT:5432
     networks:
       - timeclock
 
-  mongo-express:
-    image: mongo-express
-    tty: true
-    environment:
-      ME_CONFIG_BASICAUTH_USERNAME: admin
-      ME_CONFIG_BASICAUTH_PASSWORD: admin123
-      ME_CONFIG_MONGODB_PORT: 27017
-      ME_CONFIG_MONGODB_SERVER: trdb
-      ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGODB_USERNAME
-      ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGODB_PASSWORD
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   tty: true
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: $PGADMIN_DEFAULT_EMAIL
+  #     PGADMIN_DEFAULT_PASSWORD: $PGADMIN_DEFAULT_PASSWORD
+  #   ports:
+  #     - 9000:80
+  #   depends_on:
+  #     - postgres
+  #   networks:
+  #     - timeclock
+
+  adminer:
+    image: adminer
+    restart: always
     ports:
-      - 8081:8081
-    depends_on:
-      - trdb
+      - 9000:8080
     networks:
       - timeclock
 
-  employee-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      ENV: dev
-      ELASTIC_APM_SERVICE_NAME: employee-service
-    ports:
-      - $EMPLOYEE_GRPC_PORT:50051
-      - $EMPLOYEE_REST_PORT:8080
-    volumes:
-      # - service/employee-service:/go/src/
-      - ../employee-service:/go/src/
-    depends_on:
-      - keycloak
-    networks:
-      - timeclock
-    extra_hosts:
-      - 'host.docker.internal:172.17.0.1'
-
-  # APM
   apm-server:
     image: docker.elastic.co/apm/apm-server:7.12.1
     depends_on:
@@ -159,31 +149,6 @@ services:
       interval: 10s
       retries: 12
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8200/
-
-  # filebeat:
-  #   image: "docker.elastic.co/beats/filebeat:5.5.1"
-  #   volumes:
-  #    - ./config/filebeat.yml:/usr/share/filebeat/filebeat.yml
-  #    - filebeatdata:/usr/share/filebeat/data ## mounting paths for persistent data (log progress etc)
-  #    - ./logs:/mnt/log  ## this is the logs volume path, just to stick with the original
-  #   depends_on:
-  #     - logstash
-
-  #   logstash:
-  #     image: "docker.elastic.co/logstash/logstash:7.2.0"
-  #     volumes:
-  #       - ./config/logstash.yml:/usr/share/logstash/config/logstash.yml
-  #       - ./config/logstash-pipelines.yml:/usr/share/logstash/config/pipelines.yml
-  #       - ./config/logstash-pipeline:/usr/share/logstash/pipeline/  ## this is the pipeline config location
-  #       - ./logs:/mnt/logs  ## this is the logs volume path, just to stick with the original
-  #       - logstashdata:/usr/share/logstash/data
-  #     environment:
-  #       - "LS_HEAP_SIZE=-Xms512m -Xmx512m"
-  #     # command: bin/logstash -f pipeline/logstash.conf
-  #     ports:
-  #       - 9600:9600  ## this is the metrics endpoint port
-  #     depends_on:
-  #       - elasticsearch
 
   kibana:
     image: 'docker.elastic.co/kibana/kibana:7.12.1'
@@ -206,7 +171,6 @@ services:
       - 9200:9200
     volumes:
       - .config/elastic/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-      #   - ./.elastic/elasticsearch-ik-plugin:/usr/share/elasticsearch/plugins/ik
       - esdata:/usr/share/elasticsearch/data
     environment:
       - 'ES_JAVA_OPTS=-Xms512m -Xmx512m' ## setting jvm heap memory limits, based on the type of nodes (master, data, etc.), you can tweak this to optimize resource usage vs. performance
@@ -256,7 +220,10 @@ services:
     command: >
       bash -c
         "sleep 5s &&
-        kafka-topics --create --topic=employees --if-not-exists --bootstrap-server=kafka:9092"
+        kafka-topics --create --topic=NEW_EMPLOYEE --if-not-exists --bootstrap-server=kafka:9092 &&
+        kafka-topics --create --topic=UPDATE_EMPLOYEE --if-not-exists --bootstrap-server=kafka:9092 &&
+        kafka-topics --create --topic=NEW_USER --if-not-exists --bootstrap-server=kafka:9092 &&
+        "
     networks:
       - timeclock
 
@@ -277,9 +244,7 @@ services:
 volumes:
   esdata:
     driver: local
-  pgauthdb:
-    driver: local
-  mgdata:
+  pgdata:
     driver: local
 
 networks:
