--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "services/employee-service"]
 	path = services/employee-service
 	url = git@github.com:c-4u/employee-service.git
+	ignore = dirty
 [submodule "services/auth-keycloak-acl"]
 	path = services/auth-keycloak-acl
 	url = git@github.com:c-4u/auth-keycloak-acl.git
+	ignore = dirty
 [submodule "services/time-record-service"]
 	path = services/time-record-service
 	url = git@github.com:c-4u/time-record-service.git
+	ignore = dirty
