feat: adds company submodule

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ EMPLOYEE_REST_PORT=8090
 TIME_RECORD_GRPC_PORT=50052
 TIME_RECORD_REST_PORT=8089
 
+COMPANY_GRPC_PORT=50054
+COMPANY_REST_PORT=8091
+
 KEYCLOAK_DB=keycloak
 KEYCLOAK_USERNAME=almagro
 KEYCLOAK_PASSWORD=oapOO6tppd!7
@@ -16,4 +19,4 @@ KEYCLOAK_PASSWORD=oapOO6tppd!7
 DB_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
-POSTGRES_DBS=${KEYCLOAK_DB},"time-record-service","employee-service"
+POSTGRES_DBS=${KEYCLOAK_DB},"time-record-service","employee-service","company-service"
