--- a/.config/proxy/default.conf
+++ b/.config/proxy/default.conf
@@ -9,6 +9,14 @@ server {
         proxy_pass http://auth-keycloak-acl:8080;
     }
 
+    location /api/v1/users {
+        proxy_pass http://auth-keycloak-acl:8080;
+    }
+
+    location /api/v1/companies {
+        proxy_pass http://company-service:8080;
+    }
+
     location /api/v1/employees {
         proxy_pass http://employee-service:8080;
     }
