doc: adds swagger

--- a/.config/proxy/default.conf
+++ b/.config/proxy/default.conf
@@ -5,6 +5,10 @@ server {
     access_log /var/log/nginx/host.access.log main;
     error_log  /var/log/nginx/host.error.log debug;
 
+    location /api/v1/swagger {
+        proxy_pass http://swagger:8080;
+    }
+
     location /api/v1/auth {
         proxy_pass http://auth-keycloak-acl:8080;
     }
