--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,21 @@ services:
     ports:
       - $PROXY_PORT:80
     depends_on:
+      - swagger
       - auth-keycloak-acl
       - employee-service
       - time-record-service
+    networks:
+      - timeclock
+
+  swagger:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - $SWAGGER_PORT:8080
+    volumes:
+      - ./swagger:/go/src/
     networks:
       - timeclock
 
