feat: adds timecard

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ TIME_RECORD_REST_PORT=8089
 COMPANY_GRPC_PORT=50054
 COMPANY_REST_PORT=8091
 
+TIMECARD_GRPC_PORT=50055
+TIMECARD_REST_PORT=8092
+
 KEYCLOAK_DB=keycloak
 KEYCLOAK_USERNAME=almagro
 KEYCLOAK_PASSWORD=oapOO6tppd!7
@@ -20,4 +23,4 @@ KEYCLOAK_PASSWORD=oapOO6tppd!7
 DB_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
-POSTGRES_DBS=${KEYCLOAK_DB},"time-record-service","employee-service","company-service"
+POSTGRES_DBS=${KEYCLOAK_DB},"time-record-service","employee-service","company-service","timecard-service"
