--- a/.config/proxy/default.conf
+++ b/.config/proxy/default.conf
@@ -29,6 +29,10 @@ server {
         proxy_pass http://time-record-service:8080;
     }
 
+    location /api/v1/timecards {
+        proxy_pass http://timecard-service:8080;
+    }
+
     error_page 500 502 503 504 /50x.html;
 
     location = /50x.html {
