--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - auth-keycloak-acl
       - employee-service
       - time-record-service
+      - timecard-service
     networks:
       - timeclock
 
@@ -20,6 +21,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: go run main.go
     ports:
       - $SWAGGER_PORT:8080
     volumes:
@@ -31,6 +33,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: go run main.go all
     environment:
       ENV: dev
       ELASTIC_APM_SERVICE_NAME: auth-keycloak-acl
@@ -42,6 +45,7 @@ services:
       - ../auth-keycloak-acl:/go/src/
     depends_on:
       - keycloak
+      - kafka
     networks:
       - timeclock
     extra_hosts:
@@ -51,6 +55,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: go run main.go all
     environment:
       ENV: dev
       ELASTIC_APM_SERVICE_NAME: employee-service
@@ -62,6 +67,7 @@ services:
       - ../employee-service:/go/src/
     depends_on:
       - postgres
+      - kafka
     networks:
       - timeclock
     extra_hosts:
@@ -71,6 +77,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: go run main.go all
     environment:
       ENV: dev
       ELASTIC_APM_SERVICE_NAME: time-record-service
@@ -82,6 +89,7 @@ services:
       - ../time-record-service:/go/src/
     depends_on:
       - postgres
+      - kafka
     networks:
       - timeclock
     extra_hosts:
@@ -91,6 +99,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: go run main.go all
     environment:
       ENV: dev
       ELASTIC_APM_SERVICE_NAME: company-service
@@ -102,6 +111,29 @@ services:
       - ../company-service:/go/src/
     depends_on:
       - postgres
+      - kafka
+    networks:
+      - timeclock
+    extra_hosts:
+      - 'host.docker.internal:172.17.0.1'
+
+  timecard-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: go run main.go all
+    environment:
+      ENV: dev
+      ELASTIC_APM_SERVICE_NAME: timecard-service
+    ports:
+      - $TIMECARD_GRPC_PORT:50051
+      - $TIMECARD_REST_PORT:8080
+    volumes:
+      # - service/timecard-service:/go/src/
+      - ../timecard-service:/go/src/
+    depends_on:
+      - postgres
+      - kafka
     networks:
       - timeclock
     extra_hosts:
